--- a/styles.css
+++ b/styles.css
@@ -52,10 +52,12 @@
     line-height:1.5;
   }
   code{
-    width:80%;
+    width:50%;
     background-color:#c1fff9;
-    left:50px;
-    position:absolute;
+    position: relative;
+    left: 40px;
+    padding: 2px;
+    
   }
   p{
     padding-left:20px;
